// Database.

syntax = "proto3";

// Database.
message Database {
  // Number of elements in a vector.
  uint32 vector_size = 1;
  // Number of partitions in the database.
  uint32 num_partitions = 2; 
  // Number of subvector divisions. vector_size must be multiple of this.
  uint32 num_divisions = 3;
  // Number of codes in each codebook.
  uint32 num_codes = 4;

  // Partition references.
  // Actual data are separately loaded.
  repeated PartitionRef partition_refs = 10;

  // Centroids of partitions.
  // ID of the VectorSet containing centroids.
  string partition_centroids_ref = 11;

  // Codebook references.
  repeated CodebookRef codebook_refs = 12;

  // Reference to the attributes log.
  string attributes_log_ref = 13;
}

// Reference to a partition.
message PartitionRef {
  // ID of the partition. Supposed to be the URL-safe Base64-encoded SHA-256
  // digest of the entire partition.
  string id = 1;
}

// Reference to a codebook.
message CodebookRef {
  // ID of the codebook. Supposed to be the URL-safe Base64-encoded SHA-256
  // digest of the entire codebook.
  string id = 1;
}

// Single partition.
message Partition {
  // Vector size. Must match Database::vector_size.
  uint32 vector_size = 1;
  // Number of subvector divisions. Must match Database::num_divisions.
  uint32 num_divisions = 2;
  // Number of vectors in the partition.
  uint32 num_vectors = 3;

  // Centroid of the partition.
  // Number of elements is given by vector_size.
  repeated float centroid = 10;

  // Encoded vectors. Number of elements is given by num_vectors.
  repeated EncodedVector encoded_vectors = 11;

  // Vector IDs. Must be unique across the database.
  repeated Uuid vector_ids = 12;
}

// Codebook.
message Codebook {
  // Vector size. Must be Database::vector_size / Database::num_divisions.
  uint32 vector_size = 1;
  // Number of codes in the codebook. Must match Database::num_codes.
  uint32 num_codes = 2;

  // Codes. Number of elements is given by num_codes.
  repeated Vector codes = 10;
}

// Vector set.
message VectorSet {
  // Vector size. Must match vector_size of the container.
  uint32 vector_size = 1;

  // Elements of all the vectors.
  // i-th vector is given by:
  //   data[i * vector_size..(i + 1) * vector_size]
  repeated float data = 10;
}

// Attribute value.
message AttributeValue {
  oneof value {
    string string_value = 1;
  }
}

// Log of attributes.
message AttributesLog {
  // Log entries.
  // AttributesLog contains only "set" operations.
  // If an attribute value is set multiple times, the last value is used.
  repeated OperationSetAttribute entries = 1;
}

// Operation to set an attribute.
message OperationSetAttribute {
  // Vector ID.
  Uuid vector_id = 1;
  // Name of the attribute to set.
  string name = 2;
  // Value of the attribute to set.
  AttributeValue value = 3;
}

// Encoded vector in a partition.
message EncodedVector {
  // Indices of the codes in the codebooks.
  // Each element specifies the code in the corresponding codebook.
  // Number of elements is given by Partition::num_divisions.
  repeated uint32 elements = 1;
}

// Vector.
message Vector {
  // Vector elements.
  // Number of elements must match vector_size of the container.
  repeated float elements = 1;
}

// UUID.
message Uuid {
  // Upper half of the ID; i.e., most significant 64 bits.
  fixed64 upper = 1;
  // Lower half of the ID; i.e., least significant 64 bits.
  fixed64 lower = 2;
}
